--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.10.91",
+    "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.454.0",
     "next": "^15.0.3",
     "react": "^19.0.0",
